kubernetes/apps/default/tanoshi/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tanoshi
  labels:
    app.kubernetes.io/instance: tanoshi
    app.kubernetes.io/name: tanoshi
spec:
  replicas: 1
  revisionHistoryLimit: 0
  serviceName: "tanoshi"
  selector:
    matchLabels:
      app.kubernetes.io/instance: tanoshi
      app.kubernetes.io/name: tanoshi
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: tanoshi
        app.kubernetes.io/name: tanoshi
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tanoshi-data
        - name: share
          hostPath:
            path: /mnt/storage
            type: Directory
        - name: config
          configMap:
            name: tanoshi-config
        - name: secret
          secret:
            secretName: tanoshi-secret
      containers:
        - name: tanoshi
          image: faldez/tanoshi:0.30.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 60
          volumeMounts:
            - name: secret
              mountPath: /data/config.yml
              subPath: config.yml
            - name: data
              mountPath: /data
            - name: share
              mountPath: /manga
              subPath: books/manga
            - name: share
              mountPath: /cache
              subPath: apps/tanoshi/cache
          ports:
            - containerPort: 80
              name: http
