kubernetes/apps/default/tanoshi/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tanoshi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "traefik"
    external-dns/is-public: "true"
spec:
  rules:
    - host: tanoshi.fadhlika.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tanoshi
                port:
                  number: 80
  tls:
    - secretName: tanoshi-tls
      hosts:
        - tanoshi.fadhlika.com
